# geozarr-toolkit

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml  release.yml  test.yml
docs/: cli.md  getting-started.md  index.md
docs/api/: conversion.md  creation.md  index.md  pydantic.md  validation.md
docs/overrides/stylesheets/: extra.css
metazarr/: package-lock.json  package.json  vite.config.js
metazarr/demo/: app.js  detail-panel.js  index.html  style.css  tree.js
metazarr/demo/public/: _headers
metazarr/scripts/: compile-validators.js
metazarr/src/: consolidated-v3.js  conventions.js  crawl.js  hierarchy.js  index.js  s3-list.js  schema-cache.js  store.js  validator.js
metazarr/test/: consolidated-v3.test.js  conventions.test.js  crawl.test.js  hierarchy.test.js  validator.test.js
src/geozarr_toolkit/: __init__.py  __main__.py  cli.py
src/geozarr_toolkit/application/: app.py
src/geozarr_toolkit/conventions/: __init__.py  common.py  multiscales.py  proj.py  spatial.py
src/geozarr_toolkit/helpers/: __init__.py  metadata.py  validation.py
tests/: conftest.py  test_app.py  test_cli.py  test_version.py  test_web.py
tests/_test_data/multiscales_examples/: basic_pyramid.json  geospatial_pyramid.json
tests/_test_data/proj_examples/: epsg32633.json  epsg4326.json  with_wkt2.json
tests/_test_data/spatial_examples/: basic_2d.json  node_registration.json  with_transform.json
tests/test_conventions/: test_multiscales.py  test_proj.py  test_spatial.py
tests/test_helpers/: test_metadata.py  test_validation.py
